# TeaPacketC

Bundles/: Interface.CMake  WiiU.CMake  Windows.CMake
CMakeCommons/: CommonEnd.CMake  CommonFunctions.CMake  InterfaceCommon.CMake
Extensions/STBImageLoader/source/: ImageLoader.cpp
Extensions/TexturePreparer/: CMakeLists.txt
Extensions/TexturePreparer/include/TeaPacket/Extensions/TexturePreparer/: TexturePreparer.hpp
Extensions/TexturePreparer/source/: TexturePreparer.cpp
Generators/EnumGenerator/: Functions.CMake  main.py
Generators/EnumMapGen/: Functions.CMake  header.hpp  main.py
Modules/Assets/CPPSTDFile/: CMakeLists.txt
Modules/Assets/CPPSTDFile/source/: ReadAsset.cpp
Modules/Assets/Interface/: CMakeLists.txt
Modules/Assets/Interface/include/TeaPacket/Assets/: ReadAsset.h
Modules/Assets/WUHBContent/: CMakeLists.txt
Modules/Assets/WUHBContent/source/: ReadAsset.cpp
Modules/Bundled/Interface/: CMakeLists.txt
Modules/Bundled/Interface/generators/: init.py
Modules/Bundled/Interface/include/TeaPacket/Bundled/: .gitignore
Modules/Endianness/Interface/: CMakeLists.txt
Modules/Endianness/Interface/include/TeaPacket/Endianness/: Endian.h
Modules/Endianness/Interface/source/: endian_src.c
Modules/Graphics/Direct3D11/: CMakeLists.txt
Modules/Graphics/Direct3D11/AssetMixer/Passes/: hlsl_shader.py
Modules/Graphics/Direct3D11/AssetMixer/Passes/Setup/: spirv_cross.py
Modules/Graphics/Direct3D11/generators/: Texture.gmap  TextureFilter.gmap  TextureWrap.gmap
Modules/Graphics/Direct3D11/include/TeaPacket/Graphics/: PlatformDisplay.hpp  PlatformMesh.hpp  PlatformShader.hpp  PlatformTexture.hpp  PlatformUniformBuffer.hpp  PlatformViewport.hpp  WindowsGraphics.hpp
Modules/Graphics/Direct3D11/source/: Display.cpp  Graphics.cpp  Mesh.cpp  Shader.cpp  ShaderBuffer.cpp  ShaderVariable.cpp  Texture.cpp  UniformBuffer.cpp  Viewport.cpp
Modules/Graphics/GX2/: CMakeLists.txt
Modules/Graphics/GX2/generators/: TextureFilter.gmap  TextureFormat.gmap  TextureWrap.gmap
Modules/Graphics/GX2/include/TeaPacket/Graphics/: PlatformMesh.hpp  PlatformShader.hpp  PlatformTexture.hpp  PlatformUniformBuffer.hpp  PlatformViewport.hpp
Modules/Graphics/GX2/source/: Display.cpp  Graphics.cpp  Mesh.cpp  Shader.cpp  ShaderAttributeFormat.hpp  ShaderBuffer.cpp  ShaderVariable.cpp  Texture.cpp  UniformBuffer.cpp  Viewport.cpp
Modules/Graphics/GX2/source/GraphicsHeap/: BucketManagement.cpp  DisposableForegroundResource.cpp  DisposableForegroundResource.hpp  GX2RHeapManagement.cpp  GraphicsHeap.hpp  MEM2Resource.hpp
Modules/Graphics/Helper/: CMakeLists.txt
Modules/Graphics/Helper/include/TeaPacket/Graphics/Util/: TextureFormatBits.h
Modules/Graphics/Helper/source/: TextureFormatBits.c
Modules/Graphics/Interface/: CMakeLists.txt
Modules/Graphics/Interface/generators/Shader/: CMakeLists.txt  VariableBaseType.enum
Modules/Graphics/Interface/generators/Texture/: AvailableMode.enum  CMakeLists.txt  FilterMode.enum  Format.enum  WrapMode.enum
Modules/Graphics/Interface/include/TeaPacket/Graphics/: Display.h  Display.hpp  DisplayParams.h  Graphics.h  Graphics.hpp  ShaderBuffer.h  ShaderBufferParams.h  UniformBuffer.hpp  Viewport.h  ViewportParams.h
Modules/Graphics/Interface/include/TeaPacket/Graphics/Mesh/: Mesh.h  Mesh.hpp  MeshParams.h
Modules/Graphics/Interface/include/TeaPacket/Graphics/Shader/: .gitignore  Shader.h  Shader.hpp  ShaderParams.h  VariableType.h
Modules/Graphics/Interface/include/TeaPacket/Graphics/Texture/: .gitignore  Texture.h  Texture.hpp  TextureData.hpp  TextureFormat.hpp  TextureParams.h
Modules/Input/GameInput/: CMakeLists.txt
Modules/Input/GameInput/generators/: ControllerType.gmap  GamepadButton.gmap  MouseButton.gmap  VirtualKey.gmap
Modules/Input/GameInput/include/TeaPacket/Input/: GameInputGlobal.hpp
Modules/Input/GameInput/setup/: setup.py
Modules/Input/GameInput/source/: Input.cpp
Modules/Input/Interface/: CMakeLists.txt
Modules/Input/Interface/generators/: CMakeLists.txt  ControllerType.enum  InputAxis.enum  InputButton.enum
Modules/Input/Interface/include/TeaPacket/Input/: .gitignore  Input.h
Modules/Input/WiiU/: CMakeLists.txt
Modules/Input/WiiU/generators/: VPadButton.gmap
Modules/Input/WiiU/include/TeaPacket/Input/: VPadButtonSpecial.h
Modules/Input/WiiU/source/: Input.cpp  VPadCode.h
Modules/Logging/Cstdout/: CMakeLists.txt
Modules/Logging/Cstdout/source/: Logging.c
Modules/Logging/Interface/: CMakeLists.txt
Modules/Logging/Interface/include/TeaPacket/Logging/: AutoLoggingFuncs.h  Logging.h
Modules/Logging/STDIO/: CMakeLists.txt
Modules/Logging/STDIO/source/: Logging.cpp
Modules/Logging/WHBLogUDP/: CMakeLists.txt
Modules/Logging/WHBLogUDP/source/: Logging.c
Modules/MacroUtils/Interface/include/TeaPacket/MacroUtils/: ClassDefUtils.hpp  Features.h
Modules/Memory/CMem/: CMakeLists.txt
Modules/Memory/CMem/source/: Memory.c
Modules/Memory/Interface/: CMakeLists.txt
Modules/Random/Interface/: CMakeLists.txt
Modules/Random/STDRandom/: CMakeLists.txt
Modules/Random/STDRandom/source/: Random.cpp
Modules/System/Interface/: CMakeLists.txt
Modules/System/WiiU/: CMakeLists.txt
Modules/System/WiiU/source/: System.c
Modules/System/Windows/source/: System.cpp
Modules/Time/CoreinitU/: CMakeLists.txt
Modules/Time/CoreinitU/source/: Time.c  Time.cpp
Modules/Time/Interface/: CMakeLists.txt
Modules/Time/STDChrono/: CMakeLists.txt
Modules/Time/STDChrono/source/: Time.cpp
Modules/Types/Interface/: CMakeLists.txt
Modules/Window/Interface/: CMakeLists.txt
Modules/Window/Windows/: CMakeLists.txt
Modules/Window/Windows/source/: Window.cpp
Profiles/: WiiU.CMake  Windows.CMake
Subtools/AssetMixer/: Functions.CMake
Subtools/AssetMixer/assetmixer/: assetmixer.py
TestPrograms/AssetsTest/: CMakeLists.txt  main.c
TestPrograms/EndianTest/: CMakeLists.txt  main.c
TestPrograms/Utility/: CMakeLists.txt
TestPrograms/Utility/include/TeaPacket/TestUtil/: String.h
TestPrograms/Utility/source/: String.c
TestPrograms/WindowTest/: CMakeLists.txt  main.c
(+10 files in other folders)
