cmake_minimum_required(VERSION 3.28)
project(TeaPacket_TestPrograms_Window)
include("${TEAPACKET_ROOT}/CMakeCommons/CommonFunctions.CMake")

TP_add_interface_subdirectory(Window)
TP_add_interface_subdirectory(Logging)

TP_add_impl_subdirectory(Window Windows)

add_executable(TeaPacket_TestPrograms_Window main.c)
target_link_libraries(TeaPacket_TestPrograms_Window TeaPacket_Window_Windows TeaPacket_Logging_Base)

set_target_properties(TeaPacket_TestPrograms_Window PROPERTIES C_STANDARD 90)